[tool.poetry]
name = "zaa_tracker"
version = "0.1.0"
description = "Management Application"
authors = ["Gilbert Adu-Sefah <gilbertadusefah@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.94.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
isort = "^5.12.0"
mypy = "^1.1.1"
pre-commit = "^3.1.1"
pytest-cov = "^4.0.0"
tox = "^4.4.7"
rope = "^1.7.0"
seed-isort-config = "^2.2.0"

[tools.isort]
multi_line_output = 4
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
not_skip = "__init__.py"
line_length = 88
known_third_party = []

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.coverage.report]
include = ["zaa_tracker/*"]
fail_under = 0
precision = 2
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "raise",
    "def __repr__",
    "if __name__ == __main__:",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
